# tarot

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: atr.rs  lib.rs  reader.rs
crates/backend/src/cards/: aids.rs  emv.rs  felica.rs  helpers.rs  mifare.rs  mod.rs  transit.rs
crates/backend/src/cards/traveldoc/: crypto.rs  mod.rs  read.rs  sm.rs
crates/core/: Cargo.toml
crates/core/src/: apdu.rs  error.rs  lib.rs  model.rs  passport.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  history.rs  main.rs  settings.rs  ui.rs
crates/tui/src/parse/: codes.rs  emv.rs  felica.rs  mifare.rs  mod.rs  model.rs  tlv.rs  tmoney.rs  transit.rs  util.rs
crates/tui/src/parse/traveldoc/: eep.rs  mod.rs  mrz.rs  passport.rs
docs/: apdu-analysis.md  rc-s300.md  traveldoc-reading.md
