[package]
name = "tarot-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
tarot-core.workspace = true
tarot-backend.workspace = true
ratatui.workspace = true
crossterm.workspace = true
encoding_rs.workspace = true
hex.workspace = true